Added ensemble info

--- a/public/data/download/index.html
+++ b/public/data/download/index.html
@@ -170,7 +170,8 @@
   
   
   <p>Links will be added within the next days.</p>
-<p>If you use this data set in your publications, please acknowledge with the following: tba</p>
+<p>If you use this data set in your publications, please acknowledge with the following work:
+Czappa, Fabian, Alexander Geiß, and Felix Wolf (2022): Simulating Structural Plasticity of the Brain more Scalable than Expected.</p>
 
 
 <div style="height:  20px"></div>
