--- a/public/data/datalocation/index.html
+++ b/public/data/datalocation/index.html
@@ -154,7 +154,7 @@
     </li>
     
     <li class="">
-      <a href="#References%20and%20Acknoledgements">References and Acknoledgements</a>
+      <a href="#References%20and%20Acknowledgments">References and Acknowledgments</a>
     </li>
     
   </ul>
@@ -172,7 +172,7 @@
   <h6 id="summary">Summary</h6>
 <p>This data contains:</p>
 <ul>
-<li>X GB data</li>
+<li>~200 GB data</li>
 <li>4 simulation ensemble members</li>
 <li>3 out of 4 members consist of 50 000 neurons</li>
 <li>1 member consists of 45 000 neurons</li>
@@ -181,8 +181,12 @@
 <li>Every 100th iteration step is sampled</li>
 </ul>
 <h4 id="in-detail-description">In-Detail Description</h4>
-<p>Four simulations have been run based on the sam underlying human brain data set (Insert name of database here).
-Each simulation produces a number of text files sorted in their correspinding folder:</p>
+<p>Four simulations have been run based on neuron locations given by the same underlying human brain data (MEG 146129) provided within the human connectome database <a href="#References and Acknowledgments">[ 6 ]</a>
+.
+Technical details on the simulation process can be found in <a href="#References and Acknowledgments">[ 7 ]</a>
+ and <a href="#References and Acknowledgments">[ 8 ]</a>
+.
+Each simulation produces several text files sorted in their corresponding folder:</p>
 <table>
 <thead>
 <tr>
@@ -193,7 +197,7 @@ Each simulation produces a number of text files sorted in their correspinding fo
 <tbody>
 <tr>
 <td style="text-align:left">1</td>
-<td style="text-align:left">0-calcium level at start and equal target calcium level for all neurons, no existing connections</td>
+<td style="text-align:left">0-calcium level at the start and equal target calcium level for all neurons, no existing connections</td>
 </tr>
 <tr>
 <td style="text-align:left">2</td>
@@ -225,8 +229,8 @@ This file further contains <strong>labels</strong> explaining which part of the 
 <p>Ingoing as well as outgoing connections between nodes are written in <code>network/rank_0_in_network.txt</code> and <code>network/rank_0_out_network.txt</code> respectively.</p>
 <h6 id="per-node-information">Per Node Information</h6>
 <p>The information about individual nodes is saved to <code>*.csv</code> files.<br>
-Their naming convention is as follow: <code>(MPI_RANK_ID)_(NEURON_ID - 1).csv</code>.<br>
-Each <strong>row</strong> within the file contains the per node information at a sampled <strong>simulation step</strong>.</p>
+Their naming convention is as follows: <code>(MPI_RANK_ID)_(NEURON_ID - 1).csv</code>.<br>
+Each <strong>row</strong> within the file contains the per-node information at a sampled <strong>simulation step</strong>.</p>
 <p>The following parameters are listed:</p>
 <table>
 <thead>
@@ -270,7 +274,7 @@ Each <strong>row</strong> within the file contains the per node information at a
 </tr>
 <tr>
 <td style="text-align:left">Background Activity</td>
-<td style="text-align:left">Background noise electric activitiy input</td>
+<td style="text-align:left">Background noise electric activity input</td>
 </tr>
 <tr>
 <td style="text-align:left">Grown Axons</td>
@@ -286,7 +290,7 @@ Each <strong>row</strong> within the file contains the per node information at a
 </tr>
 <tr>
 <td style="text-align:left">Connected Excitatory Dendrites</td>
-<td style="text-align:left">Number of ingoing excitatory connections are present</td>
+<td style="text-align:left">Number of incoming excitatory connections</td>
 </tr>
 <tr>
 <td style="text-align:left"></td>
@@ -295,7 +299,7 @@ Each <strong>row</strong> within the file contains the per node information at a
 </tbody>
 </table>
 <h6 id="matlab-example-for-visualizing-nodes-and-connections">Matlab example for visualizing nodes and connections</h6>
-<p>This is a small hacked example of how to read node positions, incoming connections and calcium value and plot the network in Matlab.</p>
+<p>This is a small hacked example of how to read node positions, incoming connections, and calcium value and plot the network in Matlab.</p>
 <p>The code example below should produce the following outcome:</p>
 
 
